--- a/sqlserverreader/pom.xml
+++ b/sqlserverreader/pom.xml
@@ -29,10 +29,10 @@
 		</dependency>
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
-			<artifactId>sqljdbc4</artifactId>
-			<version>4.0</version>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>8.2.0.jre8</version>
 			<scope>system</scope>
-			<systemPath>${basedir}/src/main/lib/sqljdbc4-4.0.jar</systemPath>
+			<systemPath>${basedir}/src/main/lib/mssql-jdbc-8.2.0.jre8.jar</systemPath>
 		</dependency>
 
 		<dependency>
