--- a/hbase11xsqlreader/pom.xml
+++ b/hbase11xsqlreader/pom.xml
@@ -107,6 +107,15 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- 打包跳过 test -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
