--- a/httprestreader/pom.xml
+++ b/httprestreader/pom.xml
@@ -8,8 +8,8 @@
         <artifactId>datax-all</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>httpreader</artifactId>
-    <name>httpreader</name>
+    <artifactId>httprestreader</artifactId>
+    <name>httprestreader</name>
     <description>TxtFileReader提供了读取HTTP功能，并可以根据用户配置的类型进行类型转换，建议开发、测试环境使用。</description>
     <packaging>jar</packaging>
     <dependencies>
@@ -74,4 +74,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
