--- a/package.xml
+++ b/package.xml
@@ -379,6 +379,13 @@
             <outputDirectory>datax</outputDirectory>
         </fileSet>
         <fileSet>
+            <directory>httprestreader/target/datax/</directory>
+            <includes>
+                <include>**/*.*</include>
+            </includes>
+            <outputDirectory>datax</outputDirectory>
+        </fileSet>
+        <fileSet>
             <directory>kafkawriter/target/datax/</directory>
             <includes>
                 <include>**/*.*</include>
