--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
         <module>plugin-unstructured-storage-util</module>
         <module>hbase20xsqlreader</module>
         <module>hbase20xsqlwriter</module>
+        <module>httprestreader</module>
     </modules>
 
     <dependencyManagement>
