--- a/hdfsfilewriter/src/main/assembly/package.xml
+++ b/hdfsfilewriter/src/main/assembly/package.xml
@@ -14,21 +14,21 @@
 				<include>plugin.json</include>
 				<include>plugin_job_template.json</include>
 			</includes>
-			<outputDirectory>plugin/reader/httprestreader</outputDirectory>
+			<outputDirectory>plugin/writer/hdfsfilewriter</outputDirectory>
 		</fileSet>
 		<fileSet>
 			<directory>target/</directory>
 			<includes>
-				<include>httpreader-0.0.1-SNAPSHOT.jar</include>
+				<include>hdfsfilewriter-0.0.1-SNAPSHOT.jar</include>
 			</includes>
-			<outputDirectory>plugin/reader/httprestreader</outputDirectory>
+			<outputDirectory>plugin/writer/hdfsfilewriter</outputDirectory>
 		</fileSet>
 	</fileSets>
 
 	<dependencySets>
 		<dependencySet>
 			<useProjectArtifact>false</useProjectArtifact>
-			<outputDirectory>plugin/reader/httprestreader/libs</outputDirectory>
+			<outputDirectory>plugin/writer/hdfsfilewriter/libs</outputDirectory>
 			<scope>runtime</scope>
 		</dependencySet>
 	</dependencySets>
