--- a/oraclereader/pom.xml
+++ b/oraclereader/pom.xml
@@ -40,13 +40,21 @@
             <version>${datax-project-version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.oracle.ojdbc/ojdbc8 -->
         <dependency>
-            <groupId>com.oracle</groupId>
-            <artifactId>ojdbc6</artifactId>
+            <groupId>com.oracle.ojdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
             <version>19.3.0.0</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/src/main/lib/ojdbc8-19.3.0.0.jar</systemPath>
         </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/com.oracle.ojdbc/xdb -->
+        <dependency>
+            <groupId>com.oracle.ojdbc</groupId>
+            <artifactId>xdb</artifactId>
+            <version>19.3.0.0</version>
+        </dependency>
+
 
     </dependencies>
 
