--- a/clickhousewriter/pom.xml
+++ b/clickhousewriter/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>plugin-rdbms-util</artifactId>
             <version>${datax-project-version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>16.0.1</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
